--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-langgraph>=0.0.10
-langchain>=0.1.0
-langchain-openai>=0.0.2
+langgraph>=0.3.18
+langchain>=0.3.21
+langchain-community>=0.3.20
+langchain-core>=0.3.47
+langchain-openai>=0.3.9
 python-dotenv>=1.0.0
 requests>=2.31.0
 beautifulsoup4>=4.12.2
-pydantic>=2.5.2
+pydantic>=2.10.6
 rich>=13.7.0
 pyinstaller>=6.3.0
 pillow>=10.2.0 
